# University

./: README.md
1st semester(not finished yet)/: README.txt
1st semester(not finished yet)/1. Data types and arithmetic operations/: Main.cpp
1st semester(not finished yet)/2. Bit operations/: Ex.txt  Main.cpp
1st semester(not finished yet)/4. Cycles/: Main.cpp
1st semester(not finished yet)/5. Arrays/: Arrays.cpp
1st semester(not finished yet)/6. Strings/: 1_output.txt  CMakeLists.txt  Ex.txt
1st semester(not finished yet)/7. Functions/: CMakeLists.txt  Ex.txt
1st semester(not finished yet)/8. Single linked lists/: Ex.txt  Main.cpp
1st semester(not finished yet)/9. Double linked lists/: Ex.txt  Main.cpp
1st semester/4. Cycles/: Ex.txt
2nd semester/1. The first class/: 2_1Homework.cpp  CMakeLists.txt  Ex.txt  Parallelepiped.cpp  Parallelepiped.hpp
2nd semester/2. The rule of three/: 2_2Homework.cpp
2nd semester/3. DIY string class/: 2_3Homework.cpp  Ex.txt
C++/1st semester/1. Data types and arithmetic operations/: Ex.txt
C++/1st semester/5. Arrays/: Arrays.cpp  Ex.txt
C++/2nd semester/1. The first class/: 2_1Homework.cpp  (+1 more)
Projects/Telegram_bot/: main.py
Python/1 practice/: Ex.txt  Practice1.py
Python/2 practice/: Ex.txt  Practice2.py
Python/3 practice/: Practice3.py
Python/4 practice/: Practice4.py
Python/5 practice/: Practice5.py
Python/6 practice/: Ex.txt  main.py
Python/7 practice/: Ex.txt  main.py  test1.py
Python/8 practice/: Ex.txt  main.py
Second year/Operating systems and computer networks/: Radiohead - Creep.txt
(+103 files in other folders)
